# DjangoClassBasedView

./: README.md  pyproject.toml
CBV/: settings.py  urls.py
app/: models.py  urls.py  views.py
app/migrations/: 0001_initial.py
